# appveyor_vcpkg_cmake_hg

./: CMakeLists.txt  appveyor.yml
